--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 
 .header {
   position: fixed;
+  background-color: white;
   width: 100%;
   border-bottom: 2px solid var(--bg-color);
 }
@@ -93,6 +94,7 @@ margin-top : 88px
 .police-info  {
   display: flex;
   flex-direction: row; 
+  width: 65%;
 }
 .content {
   display: flex;
@@ -100,7 +102,6 @@ margin-top : 88px
   align-items: center;
   justify-content: center;
   padding-left: 48px;
-  width: 25%;
   gap : 5px
 }
 .content > img {
