--- a/style.css
+++ b/style.css
@@ -106,3 +106,29 @@
 .content > img {
   width: 20%;
 }
+.burger {
+  width: 25%;
+  overflow: hidden ;
+}
+.burger > img {
+  width: 100%;
+}
+.foods {
+  display: flex;
+  flex-direction: row;
+  gap : 24px
+}
+.heading {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 48px;
+}
+.heading > button {
+  border : none;
+  border-radius: 4px;
+  background-color: #F2F4FA;
+  color : #9093A6;
+  padding : 16px 24px 16px 24px
+
+}
