--- a/global.css
+++ b/global.css
@@ -18,6 +18,46 @@ body {
   --light-text: #d4d7e5;
 }
 p {
-  margin : 0;
-  padding : 0
+  margin: 0;
+  padding: 0;
+}
+
+.swiper {
+  width: 100%;
+  height: 300px;
+}
+
+.swiper-wrapper {
+  display: flex;
+}
+
+.swiper-slide {
+  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.burger {
+  width: 80%;
+  overflow: hidden;
+}
+
+.burger > img {
+  width: 100%;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  background-color: #ffffff;
+  border-radius: 25px;
+  width: 48px !important;
+  height: 48px !important;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  font-size: 20px !important;
+  font-weight: 700 !important;
+  color: #9093a6 !important;
 }
