--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /* .divider {
   } */
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Martel+Sans:wght@400;800;900&family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Martel+Sans:wght@400;800;900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 .header {
   position: fixed;
   background-color: white;
@@ -111,7 +113,6 @@
   display: flex;
   flex-direction: row;
   gap: 24px;
-  margin-bottom: 100px;
 }
 .heading {
   display: flex;
@@ -127,39 +128,85 @@
   padding: 16px 24px 16px 24px;
 }
 .address {
-  background-color: #F2F4FA;
+  background-color: #f2f4fa;
   height: 297px;
-  align-items: center;
+  width: 100%;
   gap: 0px;
   opacity: 0px;
+}
+.wrap-address {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  width: 100%;
 }
 .address > p {
-  padding-top : 24px;
-  color : #3F4255;
-
+  padding-top: 24px;
+  color: #3f4255;
 }
 .send {
-width: 88px;
-height: 72px;
-top: 113px;
-left: 1180px;
-padding: 28px 24px 28px 24px;
-gap: 10px;
-border-radius: 4px 0px 0px 0px;
-opacity: 0px;
-background-color : yellow;
-color : #B79C10;
-font-size : Martel Sans
-}
-.search-bar {
-  width: 336px;
+  width: 88px;
   height: 72px;
   top: 113px;
-  left: 840px;
+  left: 1180px;
+  padding: 28px 24px 28px 24px;
+  gap: 10px;
+  border-radius: 4px;
+  opacity: 0px;
+  background-color: #ffe145;
+  color: #b79c10;
+  border: none;
+  font-family: "Martel Sans", sans-serif;
+}
+.search-bar {
   padding: 24px 16px 24px 16px;
   gap: 0px;
   border-radius: 6px 0px 0px 0px;
-  opacity: 0px;  
+  opacity: 0px;
+}
+
+.wrap-search {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+}
+
+.search-bar {
+  box-shadow: 1px 4px 4px rgba(0, 0, 0, 0.25);
+  padding: 16px 24px 16px 24px;
+  background-color: white;
+  outline: none;
+  border: none;
+  border-radius: 6px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 8px;
+  height: 72px;
+}
+.search-bar > input {
+  width: 100%;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+.wrap-address h2 {
+  font-size: 3rem;
+  letter-spacing: 0.08em;
+  font-weight: 300;
+  font-family: "Open Sans", sans-serif;
+}
+
+.wrap-address p {
+  width: 60%;
+  font-size: 1rem;
+  padding-top: 24px;
+  padding-left: 24px;
+  letter-spacing: 0.04em;
+  font-weight: 300;
+  font-family: "Open Sans", sans-serif;
 }
