--- a/global.css
+++ b/global.css
@@ -24,22 +24,58 @@ p {
 
 .swiper {
   width: 100%;
-  height: 300px;
 }
 
-.swiper-wrapper {
-  display: flex;
-}
-
-.swiper-slide {
-  width: 25%;
+.icon-foods > .swiper {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.icon-foods > .swiper > .swiper-wrapper {
+  display: flex;
+  height: 100%;
+  height: 150px !important;
+  align-items: center;
+  padding: 15px;
+  display: flex;
+}
+
+.swiper > .swiper-wrapper {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  padding: 15px;
+  display: flex;
+}
+
+.icon-foods .swiper-slide {
+  width: 25%;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
+.icon-foods .burger {
+  display: flex;
+  height: 100%;
+  gap: 8px;
+  padding: 24px 0;
+  border-radius: 6px;
+}
+
+.swiper-slide {
+  width: 25%;
+}
+
 .burger {
   width: 80%;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+  flex-direction: column !important;
+  box-shadow: 0px 2px 16px rgba(60, 62, 74, 0.08);
   overflow: hidden;
 }
 
@@ -60,4 +96,124 @@ p {
   font-size: 20px !important;
   font-weight: 700 !important;
   color: #9093a6 !important;
+}
+
+.content-topic {
+  background-image: url("./image/bg.png");
+  background-size: cover;
+  margin-top: 48px;
+  height: 284px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4%;
+}
+
+.topic-circle {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 126px;
+  width: 126px;
+  border-radius: 50%;
+  background-color: var(--primary-color);
+  font-weight: 600;
+  font-size: 58px;
+}
+
+.topic-circle::before {
+  position: absolute;
+  top: -15%;
+  content: "";
+  z-index: 999;
+  height: 126px;
+  width: 126px;
+  border-radius: 50%;
+  border: 1px solid var(--drak-color);
+}
+
+.content-topic > div > p {
+  font-weight: 600;
+  text-align: center;
+  margin-top: 6px;
+  font-size: 20px;
+  color: #3f4255;
+}
+
+#map > img {
+  width: 100%;
+}
+
+.map {
+  width: 100%;
+  padding: 0;
+}
+
+.img-content {
+  margin-top: 48px;
+  padding-bottom: 48px;
+  padding: 48px 0;
+}
+
+.img-content > h1 {
+  color: black;
+  font-weight: normal;
+}
+
+.img-content span {
+  color: var(--secondary-text);
+  font-weight: normal;
+}
+
+.wrap-img {
+  width: 100%;
+  margin-top: 16px;
+  gap: 24px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+.wrap-img > img {
+  width: calc(100% / 4 - 24px);
+}
+
+footer {
+  padding: 48px 0;
+  background-color: #3f4255;
+  color: white;
+}
+
+footer > .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer > .container > .content-footer {
+  display: flex;
+  justify-self: start;
+  flex-direction: column;
+  gap: 24px;
+}
+
+footer > .container .content-footer p {
+  font-weight: 600;
+}
+
+footer > .container .content-footer ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+footer > .container .content-footer ul li {
+  padding: 5px 0;
+}
+
+footer > .container .wrap-content {
+  display: flex;
+  flex-direction: row;
+  width: 50%;
+  gap: 10%;
 }
