--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Martel+Sans:wght@400;800;900&family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Martel+Sans:wght@400;800;900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+html {
+  scroll-behavior: smooth;
+}
 .header {
+  z-index: 99999;
   position: fixed;
   background-color: white;
   width: 100%;
@@ -51,9 +55,30 @@
   display: flex;
   flex-direction: row;
 }
+.img-banner {
+  display: inline-block;
+  overflow: hidden;
+}
+
 .img-banner img {
   width: 100%;
+  transition: transform 0.5s ease;
+  transform-origin: center;
 }
+
+.img-banner:hover img {
+  animation: rotate 10s linear infinite;
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 #banner {
   padding-top: 10%;
   font-family: Catamaran;
@@ -109,7 +134,8 @@
   width: 20%;
 }
 
-.foods {
+.foods,
+.icon-foods {
   display: flex;
   flex-direction: row;
   gap: 24px;
@@ -118,7 +144,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 48px;
+  margin: 48px 0;
 }
 .heading > button {
   border: none;
@@ -133,6 +159,7 @@
   width: 100%;
   gap: 0px;
   opacity: 0px;
+  margin-top: 48px;
 }
 .wrap-address {
   display: flex;
@@ -209,4 +236,36 @@
   letter-spacing: 0.04em;
   font-weight: 300;
   font-family: "Open Sans", sans-serif;
+}
+#map {
+  padding-top: 100px;
+}
+
+.heading h1 {
+  font-size: 3rem;
+  font-weight: 300;
+  letter-spacing: 0.08em;
+}
+
+.scroll-top {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  bottom: 20px;
+  right: 20px;
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  font-size: 24px;
+  font-weight: normal;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
+  transition: all 0.3s ease;
+}
+.scroll-top:hover {
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
 }
